feat: Add SonarQube Maven Plugin to enable sonar:sonar goal

--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,12 @@
                             <configuration>
                                 <argLine>@{argLine}</argLine>
                             </configuration>
-                        </plugin> 
+		    </plugin>
+		    <plugin>
+                        <groupId>org.sonarsource.scanner.maven</groupId>
+                        <artifactId>sonar-maven-plugin</artifactId>
+                        <version>3.9.1.2184</version>
+                    </plugin>
                 </plugins>
         </build>
 
